--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
     <img src="a.jpg" alt="">
     <h1>Aut perferendis</h1>
      <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. et dolore magna aliqua. Ut enim ad </p><br>
-     <span><img src="./img/ic1.png" alt=""></span>
+     <span><img src="ic1.png" alt=""></span>
 </div>
 <div class="B">
      <img src="b.jpg" alt="">
      <h1>Laoreetum</h1>
      <p><br>Massa dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore est. et dolore magna aliqua. Ut enim ad</p><br>
-     <span><img src="./img/ic1.png" alt=""></span>
+     <span><img src="ic1.png" alt=""></span>
 </div>
 <div class="C">
       <img src="c.jpg" alt="">
      <h1>Fuod maxime</h1>
       <p><br>Ed dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua. Ut enim ad minim veniam</p><br>
-       <span><img src="./img/ic1.png" alt=""></span>
+       <span><img src="ic1.png" alt=""></span>
 </div>
 </div>
 </section>
