--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <li>
         <div class="dropdown">
-        <span><a href="#section2">ABOUT<br><i class="fa fa-caret-down"></i></a></span>
+        <span><a href="#section2">ABOUT<i class="fa fa-caret-down"></i></a></span>
         <div class="dropdown-content">
           <p>history</p>
           <p>
