--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="head">
         <div id="header">
-      <li><a href="section1"><span>HOME</span></a></li>
+      <li><a href="#section1"><span>HOME</span></a></li>
 
       <li>
         <div class="dropdown">
