--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
+<link rel="shortcut icon"  type="image/png" href="./img/fav-icon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>indidual task</title>
+<title>HABER</title>
   </head>
   <body>
 <header>
   <nav>
     <ul>
       <div id="image">
-      <img src="logo1.png" alt="">
+      <img src="./img/logo1.png" alt="">
       </div>
       <div class="head">
         <div id="header">
@@ -24,7 +25,7 @@
           <p>history</p>
           <p>
             <div class="dropdown-1">
-                <span>News</span>
+                <span><a>News<i class="fa fa-caret-down"></i></a></span>
                 <div class="dropdown-content-1">
                   <p>Latest</p>
                   <p>Archive</p>
@@ -52,11 +53,21 @@
  </div>
    </ul>
 
-  <div class="dot1">
-  <div class="dot2">
-  </div>
-</div>
+  <div class="dot1"></div>
+  <div class="dot2"></div>
+
+  <!-- <div class="icon" onclick="myFuction(this)">
+  <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div> -->
 </nav>
+<!-- <div class="menu-list">
+  <p>SERVICES</p>
+  <p>PROJECTS</p>
+  <p>OUR BLOG</p>
+  <p>CONTACTS</p>
+</div> -->
 </header>
 
 <section id="section1">
@@ -81,13 +92,14 @@
       -3.27947c-0.95173,-2.00093 -0.65933,-4.3688 0.74533,-6.0888l48.63013,-59.43173l-48.63013,-59.43747c-1.40467,-1.71427 -1.69133,-4.08213 -0.74533,-6.0888c0.946,-2.00667 2.96987,
       -3.27373 5.18293,-3.27373h11.46667c1.72,0 3.34827,0.774 4.4376,2.10413l51.6,63.06667c1.72573,2.1156 1.72573,5.14853 0,7.26413l-51.6,63.06667c-1.08933,1.3244 -2.7176,2.0984 -4.4376,2.0984z"></path></g></g></svg>
     </div>
-  </div>
+
 
 
 
 </section>
 <h1>OUR FOCUS IS OUR  CLIENT'S SUCCESS</h1>
 <section id="section2">
+  <div class="contaner1">
     <div class="a">
         <i class="fa fa-address-card"></i>
          <h2><br>PRIVATE <br>BANKING</h2>
@@ -103,11 +115,13 @@
     <p><br>Asum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, exercitation .<br> massa aliquip</p>
     <button>READ MORE</button>
   </div>
+</div>
+<div  class="contaner2">
   <div class="c">
-  <img src="bag.png" class="i">
+  <img src="./img/bag.png" class="i">
        <h2><br>BUDGETING<br>
        TIPS</h2>
-       <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, exercita ullamco ullamco</p>
+       <p><br>Lorem ipsum dolor sit amet, consesr adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, exercita ullamco ullamco</p>
        <button>READ MORE</button>
   </div>
   <div class="d">
@@ -117,6 +131,7 @@
         <p><br>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, exercitation ullamco. laboris aliquip.</p>
     <button>READ MORE</button>
   </div>
+</div>
 </section>
 <section id="section3">
   <div class="me">
@@ -125,22 +140,22 @@
   </div>
   <div class="flex">
 <div class="A">
-    <img src="a.jpg" alt="">
+    <img src="./img/a.jpg" alt="">
     <h1>Aut perferendis</h1>
      <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. et dolore magna aliqua. Ut enim ad </p><br>
-     <span><img src="ic1.png" alt=""></span>
+     <span><img src="./img/ic1.png" alt=""></span>
 </div>
 <div class="B">
-     <img src="b.jpg" alt="">
+     <img src="./img/b.jpg" alt="">
      <h1>Laoreetum</h1>
      <p><br>Massa dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore est. et dolore magna aliqua. Ut enim ad</p><br>
-     <span><img src="ic1.png" alt=""></span>
+     <span><img src="./img/ic1.png" alt=""></span>
 </div>
 <div class="C">
-      <img src="c.jpg" alt="">
+      <img src="./img/c.jpg" alt="">
      <h1>Fuod maxime</h1>
       <p><br>Ed dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua. Ut enim ad minim veniam</p><br>
-       <span><img src="ic1.png" alt=""></span>
+       <span><img src="./img/ic1.png" alt=""></span>
 </div>
 </div>
 </section>
@@ -189,16 +204,16 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
 width="24" height="24" class="arrow3"
 viewBox="0 0 172 172"
 style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#000000"><path d="M97.46667,17.2h11.46667c2.21307,0 4.2312,1.27853 5.18293,3.27947c0.95173,2.00093 0.65933,4.3688 -0.74533,6.0888l-48.63013,59.43173l48.63013,59.43747c1.40467,1.71427 1.69133,4.08213 0.74533,6.0888c-0.946,2.00667 -2.96987,3.27373 -5.18293,3.27373h-11.46667c-1.72,0 -3.34827,-0.774 -4.4376,-2.10413l-51.6,-63.06667c-1.72573,-2.1156 -1.72573,-5.14853 0,-7.26413l51.6,-63.06667c1.08933,-1.3244 2.7176,-2.0984 4.4376,-2.0984z"></path></g></g></svg>
-    <img src="13.jpg" alt="">
+    <img src="./img/13.jpg" alt="">
 </div>
 <div class="">
-    <img src="14.jpg" alt="">
+    <img src="./img/14.jpg" alt="">
 </div>
 <div class="">
-    <img src="16.jpg" alt="">
+    <img src="./img/16.jpg" alt="">
 </div>
 <div class="">
-     <img src="17.jpg" alt="">
+     <img src="./img/17.jpg" alt="">
   <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
   width="24" height="24" class="arrow4"
   viewBox="0 0 172 172"
@@ -234,7 +249,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
   <div class="ntlas">
 <div class="nini">
   <div class="nombu">
-<img src="nn.png" alt="">
+<i class="fa fa-wifi"></i>
 </div>
   <div class="no">
       <p>NEW YORK 9870 ST VINCENT <br>GLASGOW</p>
@@ -282,5 +297,18 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
 </div>
 </div>
 </section>
+   <!-- <script>
+     var list = document.getElementById("menu-bars-list");
+
+     function myFuction(x){
+       x.classlist.toggle("change")
+       if( list.className =="open"){
+         list.className = "";
+       }else {
+         list.className = "open";
+       }
+     }
+   </script> -->
   </body>
 </html>
+
