--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
-<link rel="shortcut icon"  type="image/png" href="./img/fav-icon.png">
+<link rel="shortcut icon"  type="image/png" href="fav-icon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>HABER</title>
   </head>
