--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 <section id="section4">
   <div class="box">
     <h1>Fresh Investment Solutions!</h1>
-    <p>Dolor sit amet, consectetur adipisicing<br>
+    <p><i class="fa fa-cog"></i>Dolor sit amet, consectetur adipisicing<br>
 Sed do eiusmod tempor incididunt ut labore</p>
-    <p>Et dolore magna aliquat enim ad minim veniam</p>
-    <p>Duis nostrud exercitation ullamco laboris</p>
-    <p>Ex ea commodo consequat</p>
+    <p><i class="fa fa-cog"></i>Et dolore magna aliquat enim ad minim veniam</p>
+    <p><i class="fa fa-cog"></i>Duis nostrud exercitation ullamco laboris</p>
+    <p><i class="fa fa-cog"></i>Ex ea commodo consequat</p>
   </div>
   <div class="box1">
     <h1><br>Learning to Save Money</h1>
