--- a/index.html
+++ b/index.html
@@ -161,20 +161,20 @@
 </section>
 <section id="section4">
   <div class="box">
-    <h1>Fresh Investment Solutions!</h1>
-    <p><i class="fa fa-cog"></i>Dolor sit amet, consectetur adipisicing<br>
+    <br><h1>Fresh Investment Solutions!</h1>
+    <br><p><i class="fa fa-cog"></i>Dolor sit amet, consectetur adipisicing<br>
 Sed do eiusmod tempor incididunt ut labore</p>
-    <p><i class="fa fa-cog"></i>Et dolore magna aliquat enim ad minim veniam</p>
-    <p><i class="fa fa-cog"></i>Duis nostrud exercitation ullamco laboris</p>
-    <p><i class="fa fa-cog"></i>Ex ea commodo consequat</p>
+    <br><p><i class="fa fa-cog"></i>Et dolore magna aliquat enim ad minim veniam</p>
+    <br><p><i class="fa fa-cog"></i>Duis nostrud exercitation ullamco laboris</p>
+   <br> <p><i class="fa fa-cog"></i>Ex ea commodo consequat</p>
+    <button>Learn more</button>
   </div>
   <div class="box1">
-    <h1><br>Learning to Save Money</h1>
-   <p><i class="fa fa-cog"></i>Lorem ipsum dolor sit amet, consectetur adipisicing </p>
-<p><i class="fa fa-cog"></i></i>Sed do eiusmod tempor incididunt ut labore</p>
-       <p><i class="fa fa-cog"></i>Ut enim ad minim veniam quis nostrud exercitation</p>
-  <p><i class="fa fa-cog"></i>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-    <p></p>
+    <br><h1><br>Learning to Save Money</h1>
+   <br><p><i class="fa fa-cog"></i>Lorem ipsum dolor sit amet, consectetur adipisicing </p>
+<br><p><i class="fa fa-cog"></i></i>Sed do eiusmod tempor incididunt ut labore</p>
+       <br><p><i class="fa fa-cog"></i>Ut enim ad minim veniam quis nostrud exercitation</p>
+  <br><p><i class="fa fa-cog"></i>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
           <button>Learn more</button>
   </div>
 </section>
