--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Sed do eiusmod tempor incididunt ut labore</p>
     <button>Learn more</button>
   </div>
   <div class="box1">
-    <br><h1><br>Learning to Save Money</h1>
+    <h1><br>Learning to Save Money</h1>
    <br><p><i class="fa fa-cog"></i>Lorem ipsum dolor sit amet, consectetur adipisicing </p>
 <br><p><i class="fa fa-cog"></i></i>Sed do eiusmod tempor incididunt ut labore</p>
        <br><p><i class="fa fa-cog"></i>Ut enim ad minim veniam quis nostrud exercitation</p>
