--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </section>
 <section id="section4">
   <div class="box">
-    <br><h1>Fresh Investment Solutions!</h1>
+    <br><br><br><h1>Fresh Investment Solutions!</h1>
     <br><p><i class="fa fa-cog"></i>Dolor sit amet, consectetur adipisicing<br>
 Sed do eiusmod tempor incididunt ut labore</p>
     <br><p><i class="fa fa-cog"></i>Et dolore magna aliquat enim ad minim veniam</p>
